# kitti_poseviz

./: CMakeLists.txt  poseviz.kdev4  transform_pose_to_camera_frame.sh
data/aloam/: 00.txt
data/imu/: 01_calibed.txt  01_imu.txt
data/lego_loam/: 00.txt  00_aft_mapped.txt  00_camera_2_camera_init.txt  00_integrated_init.txt  00_laser_2_camera_init.txt  00_test.txt  05.txt  05_original.txt  10_test.txt  Lego-loam数据说明
data/loam/: 00_aft_mapped.txt  00_integrated_init.txt  00_laser_2_init.txt  01.txt  loam_voledyne_00.txt
data/my/00/: 00.txt  00_0409.txt  00_0409_2w.txt  00_190408_icp_no_loop_all.txt  00_mapped.txt  00_my_lidarodom.txt  icp_0408_00.txt  no_loop_squence00.txt
data/my/01/: 01_calibed.txt  01_licp_imu_calibed.txt  01_licpo_imu.txt  01_licpo_result.txt
src/: draw_trajectory.cpp  transformPose.cpp
